--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -31,10 +34,6 @@
               "src/styles.css",
               "./node_modules/flexboxgrid/dist/flexboxgrid.min.css",
               "swiper/css/bundle"
-            
-            
-          
-              
             ],
             "scripts": []
           },
@@ -106,6 +105,10 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
